--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 
 server.port=8081
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/rentACar
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.properties.javax.persistence.validation.mode = none
